--- a/src/app/login/auth.module.css
+++ b/src/app/login/auth.module.css
@@ -1,4 +1,5 @@
 .page {
+    min-height: 100dvh;
     min-height: 100vh;
     display: flex;
     align-items: center;
@@ -10,7 +11,7 @@
 
 /* Decorative blobs */
 .decorLeft {
-    position: fixed;
+    position: absolute;
     top: -10%;
     left: -15%;
     width: 480px;
@@ -22,7 +23,7 @@
 }
 
 .decorRight {
-    position: fixed;
+    position: absolute;
     bottom: -10%;
     right: -15%;
     width: 440px;
